--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
   ],
   "autoload": {
       "psr-4": {
-        "ryangittings\\craft-instagram-feed\\": "src/"
+        "ryangittings\\instagramfeed\\": "src/"
       }
   },
   "extra": {
@@ -41,6 +41,6 @@
       "schemaVersion": "1.0.0",
       "hasCpSettings": false,
       "hasCpSection": false,
-      "class": "ryangittings\\craft-instagram-feed\\InstagramFeed"
+      "class": "ryangittings\\instagramfeed\\InstagramFeed"
   }
 }
