--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   "authors": [
       {
           "name": "Ryan Gittings",
-          "homepage": "ryangittings.co.uk"
+          "homepage": "https://ryangittings.co.uk"
       }
   ],
   "require": {
