--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
       "name": "craft-instagram-feed",
       "handle": "craft-instagram-feed",
       "schemaVersion": "1.0.0",
-      "hasCpSettings": false,
+      "hasCpSettings": true,
       "hasCpSection": false,
       "changelogUrl": "https://raw.githubusercontent.com/ryangittings/craft-instagram-feed/master/CHANGELOG.md",
       "class": "ryangittings\\instagramfeed\\InstagramFeed"
