--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
       "handle": "craft-instagram-feed",
       "schemaVersion": "1.0.0",
       "hasCpSettings": true,
-      "hasCpSection": false,
+      "hasCpSection": true,
       "changelogUrl": "https://raw.githubusercontent.com/ryangittings/craft-instagram-feed/master/CHANGELOG.md",
       "class": "ryangittings\\instagramfeed\\InstagramFeed"
   }
